Issue #6334:  Fix buggy internal length calculation in builtin range function